--- a/styles/base.css
+++ b/styles/base.css
@@ -1,7 +1,16 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   font-family: sans-serif;
+  margin: 20px auto;
+  padding: 20px;
+  max-width: 300px;
+}
+
+ul[role='list'] {
+  list-style: none;
 }
