--- a/components/Search.html
+++ b/components/Search.html
@@ -1,6 +1,6 @@
 <script type="module" src="../index.js"></script>
 
-<form action="" class="Search__form">
+<form data-js="search-form" class="Search__form">
   <label for="search-input" class="Search__label">Search</label>
   <input
     type="search"
@@ -10,5 +10,4 @@
     placeholder="Search for character"
     data-js="search-input"
   />
-  <button type="submit" class="Search__button">Search</button>
 </form>
