--- a/styles/index.css
+++ b/styles/index.css
@@ -3,4 +3,4 @@
 @import './utility.css';
 
 @import '../components/Button.css';
-@import '../components/Searchbar.css';
+@import '../components/Search.css';
