Remove More Button

--- a/styles/base.css
+++ b/styles/base.css
@@ -12,6 +12,7 @@ body {
   line-height: 1.5;
   display: flex;
   flex-direction: column;
+  background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
 }
 
 ::selection {
@@ -27,22 +28,4 @@ h1 {
 
 ul[role='list'] {
   list-style: none;
-}
-
-button {
-  margin-top: 10px;
-  padding: 4px 8px;
-  border-radius: 4px;
-  background-color: hotpink;
-  color: steelblue;
-  border: solid 1px steelblue;
-  text-decoration: none;
-  font-weight: bold;
-  transition-duration: 0.4s;
-}
-
-button:active {
-  color: hotpink;
-  background-color: steelblue;
-  box-shadow: 0 0 10px hotpink;
 }
